--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,58 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #f5f7f8;
+}
+
+.site-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+  padding: 0.5rem 2rem;
+  border-bottom: 1px solid #e0dfdf;
+}
+
+.page-title {
+  font-size: 1.875em;;
+}
+
+@media (max-width: 767px) {
+  .page-title {
+    display: none;
+  }
+}
+
+.logo {
+  width: 100px;
+}
+
+.nav-bar {
+  margin-left: 1rem;
+}
+
+.big-news-container, .small-news-container {
+  width: 90%;
+  max-width: 1240px;
+  margin: 1rem auto;
+  display: grid;
+  gap: 1rem;
+}
+
+@media only screen and (min-width: 768px) {
+  .big-news-container h2 {
+    font-size: 2.225em;
+  }
+  .small-news-container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width: 992px) {
+  .small-news-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+
+.big-news, .small-news {
+  background-color: rgb(185, 196, 185);
+  padding: 3rem;
 }
