--- a/code/style.css
+++ b/code/style.css
@@ -25,8 +25,14 @@ nav{
   display: none;
 }
 
+h1 {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  padding-bottom: 2%;
+  
+}
+
 h3 {
-  margin:10px 0 0 0;
+  margin:10px 0 1% 0;
   font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
@@ -73,6 +79,7 @@ h3 {
   
 }
 
+
 /* --------GRID FOR SMALL NEWS MOBILE----------------*/
 
 /* Container for ALL the grid-news */
@@ -108,6 +115,10 @@ h3 {
   object-fit: contain;
 }
 
+.grid-content:hover{
+  background-color: lightgray;
+}
+
 /* --------FOOTER FOR MOBILE----------------*/
 .footer {
   background-color: #A2B29F;
@@ -116,13 +127,21 @@ h3 {
   width: 100%;
   bottom: 0;
   display: flex;
-  justify-content: center;
+  /* justify-content: center; */
 }
 
   .footer-logo {
     width: 30pt;
     height: 30pt;
     padding: 30px;
+    align-items: flex-end;
+  }
+
+  .footer-info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 20px;
   }
 
 /* --------@MEDIA TABLET----------------*/
@@ -198,6 +217,10 @@ h3 {
 
         .grid-news {
           grid-template-columns: repeat(4, 25%);
+        }
+
+        .big-news-text{
+          width: 1000px;
         }
 
        
