--- a/code/style.css
+++ b/code/style.css
@@ -28,7 +28,7 @@ main a:hover {
 }
 
 main a:active {
-  color: blue;
+  color: rgb(0, 0, 255);
 }
 
 a:link {
@@ -65,7 +65,7 @@ hr.thick {
   object-fit: cover;
   object-position: 62% 0;
   border-radius: 43px;
-  box-shadow: 5px 10px;
+  box-shadow: 5px 10px rgb(85, 26, 139);
 }
 
 .site-header-name {
@@ -77,7 +77,7 @@ hr.thick {
 }
 
 .site-header-slogan {
-  padding-top: 0.75rem;
+  padding-top: 1.5rem;
   font-family: "Open Sans", sans-serif;
   font-size: 3vh;
   color: rgb(43, 40, 40);
@@ -86,7 +86,7 @@ hr.thick {
 }
 
 .site-header-slogan span {
-  color: purple;
+  color: rgb(85, 26, 139);
   text-transform: uppercase;
   font-size: 3.5vh;
 }
@@ -136,7 +136,11 @@ figure {
 }
 
 footer {
-  background-color: rgba(148, 187, 233, 1);
+  background: linear-gradient(
+    to right,
+    rgba(238, 174, 202, 1),
+    rgba(148, 187, 233, 1)
+  );
   min-height: 20vh;
   height: auto;
   margin-bottom: 2vh;
@@ -167,6 +171,7 @@ footer {
   display: flex;
   justify-content: center;
   font-size: 5vh;
+  color: rgb(85, 26, 139);
 }
 
 .footer-social-media-icon a:hover,
@@ -244,7 +249,14 @@ footer {
   }
 
   .site-header {
-    padding: 4% 10%;
+    padding: 4% 19%;
+  }
+
+  .site-header-image {
+    min-width: 20vw;
+    height: 20vh;
+    box-shadow: 13px 16px rgb(85, 26, 139);
+    object-position: 62% 54%;
   }
 
   .site-big-news-figure {
@@ -262,7 +274,7 @@ footer {
   .site-news {
     max-width: 22%;
     width: auto;
-    max-height: 28vh;
+    max-height: 60vh;
     display: flex;
   }
 
