--- a/code/style.css
+++ b/code/style.css
@@ -8,12 +8,13 @@ body {
 }
 
 .header {
-  background-color: #4A7856;
+  background-color: #e5f7e8;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-size: large;
   padding: 10px;
+  border-bottom: black double 2px;
 }
 
 .header h1 {
@@ -74,8 +75,18 @@ body {
   
 }
 
+.media-nav a {
+  color: #e5f7e8; 
+}
+
 .icon {
-  width: 30px;
+  width: 25px;
+}
+
+.author {
+  font-size: 8px;
+  margin-right: 10px;
+  text-align: end;
 }
 
 .big-news {
@@ -89,22 +100,21 @@ body {
 }
 
 .big-news-image {
-  width: 80%;
+  width: 100%;
   border: black solid 1px;
   padding: 2px;
-
 }
 
 .big-news-text {
-  margin: auto;
+  margin: 10px;
 }
 
 .big-news-heading {
-  font-size: 20px;
+  font-size: 22px;
 }
 
 .big-news-p {
-  font-size: 18px;
+  font-size: 20px;
 }
 
 .news-cards {
@@ -164,6 +174,7 @@ body {
 
   .header {
     flex-direction: row;
+    padding: 20px;
   }
 
   .logo {
@@ -194,6 +205,15 @@ body {
 }
 
 @media (min-width: 1025px) {
+
+  .header {
+    padding: 40px;
+  }
+
+  .big-news-image {
+    max-width: 750px;
+  }
+
   .news-cards {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
