--- a/code/style.css
+++ b/code/style.css
@@ -141,8 +141,10 @@ i {
   margin-right: auto;
 }
 
-.big-news-text {
-  margin-left: 15px;
+@media (min-width: 668px) {
+  .big-news-text {
+    margin-left: 15px;
+  }
 }
 
 @media (min-width: 1025px) {
@@ -153,6 +155,7 @@ i {
 
 .sm-icons {
   width: 50%;
+  max-width: 634px;
   margin: 50px auto 0 auto;
   display: flex;
   justify-content: space-evenly;
