--- a/code/style.css
+++ b/code/style.css
@@ -14,7 +14,7 @@ body {
   margin: auto;
   margin-top: -1rem;
   justify-content: space-evenly;
-
+  align-items: center;
 }
 
 .logo {
@@ -45,6 +45,8 @@ h3, h4 {
 
 .top-bar li {
   list-style: none;
+  float: right;
+  padding: 0.5rem;
 }
 
 .big-news {
