--- a/code/style.css
+++ b/code/style.css
@@ -1,13 +1,10 @@
 html {
   background: #dcf8cf;
-  align-items: center;
 }
 
 body {
   font-family: 'Barlow', serif;
   color: rgb(0, 0, 0);
-  margin:0;
-  align-items: center;
   margin: auto;
 }
 
@@ -50,8 +47,19 @@ h2 {
   font-size: 2rem;
 }
 
-h3, a {
+h3, .navigation a {
   font-size: 1.3rem;
+}
+
+.news-snippets-container a, .big-news a {
+  color:black;
+  text-decoration: none;
+}
+
+.news-snippets-container a:hover, .big-news a:hover {
+  text-decoration: underline;
+  color:rgb(55, 95, 51);
+  opacity: 0.5;
 }
 
 h3 {
@@ -68,15 +76,20 @@ h3 {
   margin-bottom: 2rem;
 }
 
-.big-news-article, .news-snippets{
+.big-news-article, .news-snippets {
   display: flex;
   flex-direction: column;
-  margin: 1em 2em;
+  margin: 1em 1em;
 }
 
 .news-snippets-container {
   display: flex;
   flex-direction: column;
+}
+
+.news-snippets {
+  border-radius: 1em;;
+  /* box-shadow: 10px 10px 10px 8px #888888; */
 }
 
 .news-snippets img{
@@ -129,7 +142,7 @@ footer {
   .news-snippets img {
     width: 100%;
     height: auto;
-    max-height: 250px;
+    max-height: 170px;
   }
 
   .big-news img {
