styled the text in the footer

--- a/code/style.css
+++ b/code/style.css
@@ -111,11 +111,13 @@ footer {
 }
 
 .footer-text {
-  padding: 20px;
+  padding: 5px;
   animation-duration: 6s;
   animation-name: slider;
   animation-iteration-count: infinite;
-  font-size: 25px;
+  font-family: 'Martel Sans', sans-serif;
+  letter-spacing: 3px;
+  font-size: 20px;
 }
 
 /*Animation */
