--- a/code/style.css
+++ b/code/style.css
@@ -2,7 +2,7 @@ html {
   background: #f5f7f8;
 }
 
-.site-header {
+header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -29,7 +29,32 @@ html {
   margin-left: 1rem;
 }
 
-.big-news-container, .small-news-container {
+a, a > span {
+  position: relative;
+  color: inherit;
+  text-decoration: none;
+}
+a:before, a:after, a > span:before, a > span:after {
+  content: '';
+  position: absolute;
+  transition: transform .5s ease;
+}
+
+.hover:before {
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #492059;
+  transform: scaleX(0);
+}
+
+.hover:hover:before {
+  transform: scaleX(1);
+}
+
+.big-news-container,
+.small-news-container {
   width: 90%;
   max-width: 1240px;
   margin: 1rem auto;
@@ -52,7 +77,14 @@ html {
   }
 }
 
-.big-news, .small-news {
+.big-news,
+.small-news {
   background-color: rgb(185, 196, 185);
   padding: 3rem;
+}
+
+.big-news:hover, 
+.small-news:hover {
+  top: -2px;
+  box-shadow: 0 4px 5px rgba(0,0,0,0.2);
 }
