Changed padding in body to 0

--- a/code/style.css
+++ b/code/style.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Inconsolata', monospace;
     font-family: 'Mukta Vaani', sans-serif;
     margin: 0;
+    padding: 0;
 }
 
 .main-grid {
