--- a/code/style.css
+++ b/code/style.css
@@ -118,6 +118,15 @@ header {
 .contact {
   width: 400px;
 }
+
+.footer {
+padding: 20px;
+font-size: 12px;
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+}
+
 /* tablet */
 @media (min-width: 768px){
   header {
