--- a/code/style.css
+++ b/code/style.css
@@ -5,26 +5,18 @@
   padding: 0;
 }
 
-html {
-  /*background-color: orange;
-  background-color: blue;*/
-}
-
 body {
-  /*background-color:rgb(228, 168, 56);*/
   background-color: orange;
   min-height: 100vh;
-  margin-top: 12rem;
-  min-width: 444px;
+  min-width: 444px; /*To make the body not to shrink*/
 }
-/*Header styling*/
+/*HEADER STYLING*/
 header {
   background-color: whitesmoke;
   height: 10em;
   width: 100%;
   position: fixed;
   top: 0;
-  margin-bottom: 50px;
 }
 
 nav ul {
@@ -56,7 +48,7 @@ h1 {
 section.big-news {
   margin: 0 auto;
   margin-top:11rem;
-  /*width: 90%;*/
+  width: 90%;
   border:3px solid;
   background-color:lightcyan; 
 }
@@ -85,46 +77,53 @@ section.big-news p {
   padding: 1rem;
 }
 
-/* SMALL SECTION*/
+/* SMALL SECTION: general styling for small section*/
 section.small-news {
  margin-top: 2rem;
 }
 
 article {
-  width: 70%;
+  width: 500px;
+  height: 400px;
   margin: 0 auto;
   margin-top:20px;
-}
-
-article.breakfast-club-wrapper {
- background-color: cornsilk;
- height: 300px;
 }
 
 h3 {
   font-size: 1.5rem;
   padding:10px;
-  text-align: center;
-  
+  text-align: center; 
 }
-div.breakfast-club {
+
+div.flex {
   display: flex;
-
 }
-section.small-news img {
-  width: 50%;
-  height: 200px;
-  margin: 10px;
 
-}
 section.small-news p {
   font-size: 1.2rem;
-  margin:10px;
-  /*width: 50%;
-  height: 20vh;
-  float:left;*/
-  
+  margin:10px; 
 }
+
+section.small-news img {
+  /*width: 50%;*/
+  height: 300px;
+  margin: 10px;
+  border:2px dashed;
+
+}
+/*SMALL SECTION: unique styling*/
+
+article.small-news-one {
+ background-color: cornsilk;
+
+}
+
+div.text { 
+  border:2px dashed;
+  margin:10px;
+}
+
+
 
 
 
@@ -135,18 +134,20 @@ section.small-news p {
   section.big-news {
     display: flex;
     align-items: center;
-    width: 90%;
   }
 
   .cat-foto-wrapper img {
     border-radius: 20%;
     width:360px;
-    
+  }
+  section.big-news h2 {
+    text-align: justify;
   }
 }
+
 @media (min-width:1212px) {
   .cat-foto-wrapper img {
-    margin-top: 10px;
     width: 500px;
   }
+  
 }
