minor text changes

--- a/code/style.css
+++ b/code/style.css
@@ -71,7 +71,8 @@ header {
   max-width: 350px;
   align-self: center;
   text-align: justify;
-  border: 2px solid #fff;
+  padding: 8px;
+ 
 }
 
 .small-news {
