--- a/code/style.css
+++ b/code/style.css
@@ -9,6 +9,7 @@ body {
   background-color: orange;
   min-height: 100vh;
   min-width: 444px; /*To make the body not to shrink*/
+  
 }
 /*HEADER STYLING*/
 header {
@@ -42,15 +43,17 @@ h1 {
   text-align: center;
   margin-top: 1rem;
   color: blue;
+  font-family: 'Newsreader', serif;
 }
 /* Big news section */
 
 section.big-news {
   margin: 0 auto;
   margin-top:11rem;
+  padding-top: 1rem;
   width: 90%;
-  border:3px solid;
   background-color:lightcyan; 
+  border-radius: 50px;
 }
 
 .cat-foto-wrapper {
@@ -61,20 +64,21 @@ section.big-news {
 .cat-foto-wrapper img {
   width: 100%;
   height: auto;
-}
-
-.big-news-text {
+  border-radius: 40px;
 }
 
 section.big-news h2 {
   text-align: center;
   font-size: 1.6rem;
   padding: 1rem;
+  color: orange;
+  text-shadow: 1px 1px rgb(46, 31, 2);
 }
 
 section.big-news p {
   font-size: 1.5rem;
   padding: 1rem;
+  font-family: 'Hina Mincho', serif;
 }
 
 /* SMALL SECTION: general styling for small section*/
@@ -92,7 +96,9 @@ article {
 h3 {
   font-size: 1.5rem;
   padding:10px;
-  text-align: center; 
+  text-align: center;
+  font-family: 'Newsreader', serif;
+   
 }
 
 div.flex {
@@ -137,7 +143,7 @@ div.text {
   }
 
   .cat-foto-wrapper img {
-    border-radius: 20%;
+    /*border-radius: 20%;*/
     width:360px;
   }
   section.big-news h2 {
