--- a/code/style.css
+++ b/code/style.css
@@ -2,7 +2,7 @@
   margin: 0;
 }
 html {
-  background: whitesmoke;
+  background: lightgrey;
   color: black;
   font-family: Helvetica, sans-serif, Arial,;
   font-size: 12px;
@@ -13,7 +13,8 @@ html {
   height: 100px;
   position: sticky;
   border-radius: 10px;
-  margin: 30px
+  margin: 30px;
+
 }
 
 header{
@@ -26,18 +27,50 @@ nav{
   display:flex;
   justify-content: space-between;
   align-items: center;
+  padding-right: 20px;
 }
 .site-name{
   font-size: 6vw;
   position: center;
 
 }
-.grid {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 1rem;
-  background-color: lightgray;
+li{
+  padding: 5px;
+  position: -webkit-sticky;
+  border-right: 10px;
+}
+.big-news{
+  display: flex;
+  flex-direction: column;
+  margin: 10px 20px;
+  padding: 20px;
+/*  margin-right:10px;*/
+}
+.big-news-text-block{
+  text-align: center;
+  margin: 20px;
+/*  flex-grow: 1;
+  justify-content: center;*/
+}
+.flex-box {
+  display: flex;
+  height: 50%;
+  width: 50%;
 
+}
+/*.big-news {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(250, 250, 250);
+  margin: 10px 20px;
+  padding: 5px;
+  text-align: right;
+  align-items: left;
+  grid-template-columns: repeat(2, 50%);
+
+}*/
+.big-news picture {
+  max-width: 50%;
 }
 .flex-parent {
 
@@ -72,13 +105,33 @@ nav{
   color: black;
   text-align: right;
 }
-.container {
-  padding: 2rem;c
 
+/* Hides navigation for mobile */
+@media (max-width:767px) {
+  #navigation-bar{
+    display:none;
+  }
+/* Tablet and bigger becomes rows, grid 2 columns */
+@media (min-width:768px) {
+  header{
+    flex-direction: row;
+    text-align: right;
+  }
+  .big-news{
+    flex-direction: row;
+  }
+  .big-news-text-block{
+    text-align: left;
+  }
+  .small-news{
+    grid-template-columns: repeat(2, 1fr);
+    gap: 0 20px;
+  }
 }
-.cell {
-  padding: 1rem;
-}
-.flex {
-  display: flex;
+
+/* Desktop goes 4 grid columns*/
+@media (min-width:992px) {
+  .small-news{
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
