--- a/code/style.css
+++ b/code/style.css
@@ -62,6 +62,7 @@ header {
   border-bottom: 10px solid #FFF200;
   width: 100%;
   
+  
 
 }
 
@@ -113,6 +114,12 @@ nav a:hover {
 
 /*** Big News***/
 
+.news{
+
+  width:90%;
+  margin-left: auto;
+  margin-right: auto;
+}
 .big-news {
   display: flex;
   margin-left: auto;
