--- a/code/style.css
+++ b/code/style.css
@@ -1,7 +1,9 @@
 .header {
   display: flex;
   margin: 20px;
-  width: 100%;
+  width: auto;
+  align-items: center;
+  justify-content: space-evenly;
  }
 
 .logo {
@@ -18,20 +20,10 @@ h1 {
 .navigation {
   display: flex;
   align-items: flex-end;
+  margin: 20px;
   }
 
-a:link, a:visited {
-  background-color: black;
-  color: white;
-  padding: 14px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  }
 
-a:hover, a:active {
-  background-color: #81F0A3;
-}
 
 .main-container {
 display: flex;
@@ -59,17 +51,18 @@ flex-direction: column;
   width: auto;
   height: auto;
   margin: 0 5px 0 30px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto';
+  text-align: justify;
 }
 
 h2 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Permanent Marker';
   padding: 0%;
   margin: 2px;
 }
 
 h3 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Permanent Marker';
   padding: 0%;
   margin: 2px;
 }
@@ -77,6 +70,9 @@ h3 {
 
 hr {
   display: block;
+  border: 2px solid #81F0A3;
+  width: auto;
+  margin: 20px;
 }
 
 .other-news {
@@ -92,8 +88,13 @@ hr {
   width: 100%;
   display: flex;
   flex-direction: column;
-
+  border: 2px dotted beige;
+  margin: 5px;
+  padding: 0 5px
 }
+
+
+ 
 
 .image-other {
   width: auto;
@@ -101,6 +102,7 @@ hr {
   margin: 0;
   object-fit: contain;
   
+
 
 }
 
@@ -110,10 +112,21 @@ hr {
   height: auto;
   width: auto;
   padding: 5px;
-  /* background-color: honeydew; */
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Roboto';
   margin: 0;
+  text-align: justify;
+  
 }
+
+a:link, a:visited {
+  color:black;
+  font-family: 'Permanent Marker';
+  padding: 14px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  }
+
 
 
 @media (max-width: 767px) {
@@ -154,11 +167,24 @@ hr {
   }
 
   h1 {
-    font-size: 100px;
+    font-size: 90px;
   }
 
+  
+  a:hover, a:active {
+    color: #81F0A3;
+  }
 
   .other-news {
     grid-template-columns: 1fr 1fr 1fr 1fr;
    }
+
+   img:hover {
+    filter: grayscale(100%);
+    -webkit-filter: grayscale(100%);
+    }
+
+    
+    
+
   }
