--- a/code/style.css
+++ b/code/style.css
@@ -14,6 +14,7 @@ body {
 header {
   padding: 20px 5%;
   box-shadow: 0 -50px 25px 50px #c9c9c9;
+  background-color: #ffffff;
 }
 
 .flex-header {
@@ -74,6 +75,27 @@ p {
   font-size: 1rem;
   line-height: 2rem;
   margin-bottom: 25px;
+}
+
+/******************** Footer & footer-button ********************/
+
+footer {
+  margin: 0;
+}
+
+.footer-button {
+  padding: 0% 5% 5% 5%;
+  text-align: right;
+}
+
+.fa-arrow-alt-circle-up {
+  font-size: 3rem;
+  color: #cfcfcf;
+  justify-content: flex-end;
+}
+
+.fa-arrow-alt-circle-up:hover {
+  color: #202121;
 }
 
 /******************** Images and Grid ********************/
@@ -154,5 +176,9 @@ img {
   header {
     padding-top: 40px;
     padding-bottom: 40px;
+  }
+
+  footer {
+    display: none;
   }
 }
