--- a/code/style.css
+++ b/code/style.css
@@ -4,73 +4,65 @@ html {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-@media (min-width: 668px) {
-.grid-container-top {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 30px;
-    color: violet;
-  }
-}
 
-
-.grid-container-top {
+/* .header {
   border: transparent;
   height: 50px;
-  display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 5px;
   padding: 20px;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; 
+} */
+
+.container {
+  padding: 2 rem; 
 }
 
-.title {
-  grid-column: span 1/ 1;
+.title{
+  background-color: blueviolet;
+  padding: 1 rem;
+}
+
+.cell {
+  background-color: blueviolet;
+  padding: 1 rem;
 }
 
 .meny {
-  grid-column: span 4/ 6;
+  font-size: small;
+  background-color: blueviolet;
+  padding: 1 rem;
 }
 
-.big-news {
- border: 2px solid;
- height: 1000px;
- display: flex;
- align-items: center;
- justify-content: center;
+.grid {
+display: grid;
+grid-template-columns: 2fr 1fr 1fr;
+grid-gap: 1rem;
 }
 
 .news-img {
-  height: 600px;
-  width: 600px;
+  height: 300px;
+  width: 300px;
   margin: 5px;
   margin-top: 30px;
+  grid-column: span 4;
+}
+
+img {
+  height: 300px;
+  width: 300px;
 }
 
 .undertitle {
-  margin: 5px;
+  background-color: blueviolet;
   font-style: italic;
   font-size: small;
-  padding-left: 10px;
- } 
-
-h2 {
-  margin: 5px;
-  padding: 10px;
-  margin-top: 20px;
-}
-
-.big-news-text {
-  margin: 5px;
-  padding: 10px;
  } 
 
  button {
   height: 30px;
-  display: block;
   margin: 5px;
+  margin-left: 10px;
   border: 1px solid;
   background-color: #f7f7fa;
   font-size: 12px;
@@ -78,14 +70,14 @@ h2 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+
 .grid-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+  grid-template-columns: 1fr; 
   gap: 5px; 
   margin-top: 30px;
   margin-bottom: 20px;
-  justify-content: center;
-  align-items: center;
+  
 }
 
 img {
@@ -94,29 +86,33 @@ img {
 
 
 
-.flex-parent {
-  height: 500px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@media (min-width: 668px) {
+  .grid-container-top {
+      display: grid;
+      align-items: center;
+      justify-content: space-between;
+      padding: 30px;
+      color: violet;
+      flex-wrap: wrap;
+      grid-column: span 4;
+    }
+  }
+
+@media (min-width: 668px) {
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
+  gap: 5px; 
+  margin-top: 30px;
+  margin-bottom: 20px;
+  grid-column-start: 1;
+  grid-column-end: 4;
+} 
+
+.title {
+  grid-column: span 1/ 1;
 }
 
-.flex-child {
-  margin: 5px;
-  border: 2px solid;
-  border-radius: 5px;
-  width: 300px;
-  height: 300px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.flex-child1 {
-  flex-direction: row;
-}
-
-img {
-  width: 300px;
-  height: 300px;
+.meny {
+  grid-column: span 2/ 6;
 }
