--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,310 @@
+/* GOOGLE FONTS GOES HERE */ 
+@import url('https://fonts.googleapis.com/css2?family=Bungee&display=swap');
+
+/* GLOBAL STYLES*/ 
+* {padding: 0; margin: 0;}
+
 html {
-  background: #0025ff;
-  color: #fff;
+    background: #222222;
+    color: #E5E5E5;
+    font-family: 'Bungee'; 
+}
+
+body {
+  position:relative;
+  min-height: 100vh;
+}
+
+p {
+  font-family: 'Roboto';
+  font-size: 14px;
+}
+
+/* HEADER & NAVIGATION */
+.flex-container  {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  margin-bottom: 1rem;
+}
+
+.logo {
+    margin: 0 2em;
+}
+
+.navigation  {
+  display: flex;
+  list-style: none;
+  text-transform: uppercase;
+}
+
+.navigation a {
+  display: block;
+  padding: 1em;
+  color: white;
+  text-decoration: none;
+  letter-spacing: .45rem;
+}
+
+.navigation a:hover {
+  background: #00ace6;
+}
+
+/* BIG NEWS SECTION */ 
+
+.latest-news-title {
+  font-size: 40px;
+  padding: 0 0 2rem 0;
+}
+
+.big-news {
+  display: flex;
+  justify-content: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  width: auto;
+  height: auto;
+}
+
+.news {
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  width: 1200px;
+  height: 400px;
+  padding: 2rem;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.text-container {
+  display: flex;
+  align-items:center;
+}
+
+.container {
+    padding: 0 1rem;
+}
+
+.big-news-image {
+  height: 300px;
+ }
+
+.big-news-title {
+  font-size: 26px;
+  padding-bottom: 1em;
+}
+
+.big-news-text {
+  font-size: 14px;
+  display: block;
+}
+
+.big-news-text a {
+  font-size:20px;
+  font-family:'Bungee'; 
+  text-decoration: underline;
+}
+
+.big-news-text a:hover {
+  color:#00ace6;
+}
+
+
+/* OTHER NEWS SECTIONS*/ 
+
+.other-news {
+  display: flex;
+  width: 1200px;
+  flex-wrap: wrap;
+  padding:1rem;
+}
+
+.news-card {
+  width: 380px;
+  height: 400px;
+  padding: 2rem 0;
+
+}
+
+.other-news-image {
+  width: 340px;
+}
+
+.other-news-title {
+  padding: 1rem 0;
+}
+
+.other-news-text {
+  font-size: 12px;
+  width: 340px;
+}
+
+.other-news a {
+  font-size: 14px;
+  font-family: 'Bungee';
+  text-decoration: underline;
+  display: block;
+  padding-top:1rem;
+}
+
+.other-news a:hover {
+  color:#00ace6;
+}
+
+/* FOOTER */
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  box-shadow: 8px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding:1rem;
+}
+
+footer p {
+  font-family: 'Bungee';
+  font-size: 16px;
+  letter-spacing: .10rem;
+  padding:1em;
+}
+
+.project {
+  font-family: 'Roboto';
+  text-align: center;
+}
+
+footer a:hover {
+  color:#00ace6;
+}
+
+
+
+
+
+
+/* ******MEDIA QUERIES****** */ 
+
+
+
+
+
+
+/* STYLE FOR TABLET */
+
+@media (max-width: 1038px) {
+  .flex-container {
+    flex-direction: column;
+  }
+  
+  .logo {
+    margin: 0;
+  }
+  
+  .navigation  {
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  .container {
+    padding: 0 1rem 0;
+  }
+
+  .latest-news-title {
+    padding: 2rem 0.5rem;
+    text-align: center;
+  }
+
+  .big-news-image {
+    height: auto;
+   }
+
+  .big-news-title {
+    font-size: 24px;
+  }
+
+  .big-news-text {
+    font-size: 12px;
+  }
+
+  .big-news-text a {
+    font-size: 18px;
+  }
+
+  .big-news-image {
+    width: 400px;
+  }
+
+}
+
+
+/* STYLE FOR MOBILE */
+
+@media (max-width: 768px) {
+ 
+  .logo {
+    margin: .25em 0;
+  }
+
+  .navigation {
+    flex-direction: column;
+  }
+  
+  .navigation a { 
+    text-align: center; 
+    padding: 10px;
+    border-top: 1px solid rgba(255,255,255,0.3); 
+    border-bottom: 1px solid rgba(0,0,0,0.1); 
+  }
+
+  .big-news {
+    flex-direction: column;
+    width: auto;
+    height: auto;
+  }
+
+  .news {
+    display: flex;
+    flex-direction: column;
+    width: auto;
+    height: auto;
+  }
+
+  .container {
+    padding: 1rem 0;
+  }
+
+  .big-news-image {
+    width: 100%;
+    height: auto;
+  }
+
+  .big-news-text {
+    font-size: 12px;
+  }
+
+  .text-container {
+    flex-direction: column;
+  }
+
+  .other-news {
+    display: flex;
+    width: auto;
+    height: auto;
+   }
+
+   .news-card {
+     width: auto;
+     height: auto;
+   }
+
+   .other-news-image {
+     width:100%;
+     height: auto;
+   }
+
+   .other-news-text {
+     width:auto;
+   }
 }
