--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,5 @@
 html {
-  background: #eee;
+  background: #f8f8f8;
 }
 
 body {
@@ -40,8 +40,10 @@ p {
 
 .header {
     display: flex;
-    padding: 1rem 0.5rem 0 1rem;
+    padding: 1rem 0.5rem 0.5rem 1rem;
     justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
   }
 
 
@@ -64,9 +66,10 @@ a {
   background: rgb(224, 124, 9);
   text-decoration: none;
   border-radius: 50px;
-  padding: 12px 16px;
+  padding: 12px 24px;
   min-width: 96px;
   margin-right: 0.5rem;
+  margin-top: 1rem;
 }
 
 
@@ -84,18 +87,23 @@ a {
 .the-fox{
   height: 44px;
   width: auto;
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 50%;
 }
 
-.navigation {
-    display: none;
-  }
+.navigation a {
+  font-size: 1rem;
+  margin-left: 24px;
+}
+
 
 .big-news-container {
    display: flex;
    flex-direction: column;
    margin-left: 1rem;
    margin-right: 1rem;
-   margin-top: 1.2rem;
+   margin-top: 0.5rem;
   
 }
 
@@ -149,33 +157,49 @@ a {
   }
 
 
-@media (min-width: 768px) and (max-width: 991px) {
+  @media (max-width: 767px) {
 
-    /* .small-news-container {
-    grid-template-columns: repeat(2, 1fr);
-    gap: 0 20px;
-    } */
+    #link-id {
+      display: none;
+    }
 
-    .header {
-      align-items: center; 
-      padding: 1.5rem 1rem 1.5rem 1rem;
   }
 
-  .button-link {
-    padding: 20px 20px;
-    min-width: 110px;
-    margin-right: 0;
-  }
 
-  h1{
+  @media (min-width: 768px) and (max-width: 991px) {
+
+    body {
+      margin: 0  0 110px 0;
+    }
+
+
+    h1 {
     font-size: 1.5rem;
-  }
+    }
 
     h2 {
       font-size: 3rem;
       line-height: 3.2rem;
       margin-top: 2rem;
 
+    }
+
+    .navigation a {
+      font-size: 1.125rem;
+      font-weight: 600;
+      margin-left: 24px;
+    }
+
+    .header {
+      align-items: center; 
+      padding: 2rem 1rem 1rem 1rem;
+      
+    }
+
+  .button-link {
+    padding: 20px 24px;
+    min-width: 185px;
+    margin-right: 0;
     }
 
     p {
@@ -190,44 +214,61 @@ a {
     }
 
     .the-fox{
-      height: px;
+      height: 48px;
       width: auto;
+    }
+
+
+    .technigo-logo {
+      width: 64px;
+    }
+
+    .footer {
+      padding: 1rem 2rem 1rem 2rem;
     }
 
 }
 
 
 @media (min-width: 991px) {
+  
+  body {
+    margin: 0  0 120px 0;
+  }
 
-    .header {
-        align-items: center; 
-        padding: 1.5rem 2rem 1.5rem 2rem;
+  .header {
+    align-items: center; 
+    padding: 2rem 2rem 2rem 2rem;
+  }
+
+
+   .technigo-logo {
+     width: 64px;  
     }
 
-    .technigo-logo {
-        width: 64px;
-      }
-
     .button-link {
-        padding: 20px 24px;
-        min-width: 185px;
-        margin-right: 0;
-      }
-
+      padding: 20px 24px;
+      min-width: 185px;
+      margin-right: 0; 
+    }
 
     .button-link:hover {
        color: #f8f8f8;
-       background-color: rgb(187, 111, 25);
-      }
+       background-color: rgb(187, 111, 25);   
+    }
+
+    h1 {
+        font-size: 1.125rem;
+        font-weight: 600; 
+    }
 
     h2 {
       font-size: 3rem;
       line-height: 3.2rem;
-
     }
 
-    h3:hover{
-        color: rgb(201, 115, 16);
+    h3:hover {
+      color: rgb(201, 115, 16);
     }
     
     a:hover {
@@ -235,13 +276,15 @@ a {
     }
     
     .navigation a {
-        font-size: 1rem;
-        margin-left: 24px;s
+        font-size: 1.125rem;
+        font-weight: 600;
+        margin-left: 24px;
     }
 
     .big-news-container {
         justify-content: space-between;
         flex-direction: row;
+        margin-top: 3rem;
         margin-left: 10%;
         margin-right: 10%;
     }
@@ -259,16 +302,14 @@ a {
 
     .small-news-container {
         grid-template-columns:  1fr 1fr 1fr 1fr;
-        flex-wrap: wrap;
+        gap: 32px;
         margin-top: 48px;
         margin-left: 10%;
         margin-right: 10%;
     }
 
-    .small-news-item {
-        width:85%;
-        margin-bottom: 1rem;
-        
+    .small-news-item {                      
+      margin-top: 0;
     }
 
     .small-news-item:hover {
@@ -279,3 +320,5 @@ a {
         padding: 1rem 2rem 1rem 2rem;
       
     }
+
+  }
