--- a/code/style.css
+++ b/code/style.css
@@ -28,6 +28,7 @@ nav ul {
 
 ul > li {
   padding: 1rem;
+  color:palevioletred;
 }
 
 .logo {
@@ -50,7 +51,7 @@ h1 {
 section.big-news {
   margin: 0 auto;
   margin-top:11rem;
-  padding-top: 1rem;
+  padding: 1rem 0;
   width: 90%;
   background-color:lightcyan; 
   border-radius: 50px;
@@ -81,54 +82,46 @@ section.big-news p {
   font-family: 'Hina Mincho', serif;
 }
 
-/* SMALL SECTION: general styling for small section*/
-section.small-news {
- margin-top: 2rem;
+span {
+ 
+  font-weight: bolder;
 }
 
-article {
-  width: 500px;
-  height: 400px;
-  margin: 0 auto;
-  margin-top:20px;
+a {
+  text-decoration: none;
+  color:blue;
+}
+
+/* SMALL SECTION: general styling for small section*/
+section.small-news {
+  border:3px solid;
+  margin-top: 2rem; 
+}
+
+div.card {
+  border:3px solid blue;
+  margin: 1rem;
+  background-color: cornsilk;
 }
 
 h3 {
-  font-size: 1.5rem;
-  padding:10px;
   text-align: center;
-  font-family: 'Newsreader', serif;
-   
+  margin: 2rem;
+  font-size: 1.5rem;
 }
 
-div.flex {
-  display: flex;
+.card img {
+  width: 100%;
+  height: 450px;
 }
 
-section.small-news p {
-  font-size: 1.2rem;
-  margin:10px; 
-}
-
-section.small-news img {
-  /*width: 50%;*/
-  height: 300px;
-  margin: 10px;
-  border:2px dashed;
+.card p {
+  margin: 1.5rem;
+  font-size: 1.6rem;
+  line-height: 1.5;
+  font-family: 'Hina Mincho', serif;
 
 }
-/*SMALL SECTION: unique styling*/
-
-article.small-news-one {
- background-color: cornsilk;
-
-}
-
-div.text { 
-  border:2px dashed;
-  margin:10px;
-}
-
 
 
 
