Added a google font for the H2 and increased the size on h3 on ipad view

--- a/code/style.css
+++ b/code/style.css
@@ -16,6 +16,7 @@ h1 {
 }
 
 h2 {
+  font-family: roboto;
   font-size: 2rem;
   line-height: 2.5rem;
   color: #333;
@@ -178,9 +179,15 @@ a {
     }
 
     h2 {
-      font-size: 3rem;
-      line-height: 3.2rem;
+      font-size: 4rem;
+      line-height: 4.2rem;
       margin-top: 2rem;
+
+    }
+
+    h3 {
+      font-size: 1.5rem;
+      line-height: 2rem;
 
     }
 
